--- a/doAn/app/src/main/res/color/btn_background_color.xml
+++ b/doAn/app/src/main/res/color/btn_background_color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:color="#4CAF50"/>
-    <item android:state_selected="true" android:color="@color/green"/>
-    <item android:color="#FF9800"/>
+    <item android:state_pressed="true" android:color="#818181"/>
+    <item android:state_selected="true" android:color="#818181"/>
+    <item android:color="#FFD28F"/>
 </selector>
