--- a/doAn/app/src/main/res/layout/canh_bao_dialog.xml
+++ b/doAn/app/src/main/res/layout/canh_bao_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,10 +10,12 @@
 
     <TextView
         android:id="@+id/tenCanhBaoTv_dialog"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:drawablePadding="30dp"
         android:layout_height="wrap_content"
         android:textSize="22dp"
-        />
+        app:drawableStartCompat="@drawable/error_64px" />
     <TextView
         android:id="@+id/canhBaoTv_dialog"
         android:layout_width="wrap_content"
