--- a/doAn/app/src/main/res/layout/cong_trinh_custom_listview.xml
+++ b/doAn/app/src/main/res/layout/cong_trinh_custom_listview.xml
@@ -11,18 +11,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center">
 
         <TextView
             android:id="@+id/tenCongTrinhTv_CTLV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold"
+            />
         <TextView
             android:id="@+id/diaChiCongTrinhTv_CTLV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
@@ -36,7 +40,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/details_vector"
             android:id="@+id/chiTietBtn_CTLV"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="#00000000"
             android:contentDescription="xem chi tiết công trình" />
 
         <ImageButton
@@ -44,8 +48,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/xoaBtn_CTLV"
             android:src="@drawable/delete_vector"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="@color/white"
             android:contentDescription="xoá công trình" />
+
     </LinearLayout>
 
 </LinearLayout>
