--- a/doAn/app/src/main/res/layout/activity_menu.xml
+++ b/doAn/app/src/main/res/layout/activity_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F4E17D"
+    android:background="@drawable/bg5"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingBottom="40dp"
@@ -21,61 +21,67 @@
         android:drawablePadding="10dp"
         android:gravity="center"
         android:text="Quản lý vận chuyển"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="40dp" />
 
     <android.widget.Button
         android:id="@+id/btnXem_CT"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="40dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="20dp"
         android:layout_weight="1"
         android:background="@drawable/menu_custom_button_effect"
         android:drawableRight="@drawable/building_48px"
         android:paddingRight="30dp"
         android:text="Công trình"
-        android:textColor="@color/black"
+        android:textColor="@color/purple_700"
+        android:textStyle="bold"
         android:textSize="25sp" />
 
     <android.widget.Button
         android:id="@+id/btnXem_VT"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="40dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="20dp"
         android:layout_weight="1"
         android:background="@drawable/menu_custom_button_effect"
         android:drawableRight="@drawable/brick_wall_48px"
         android:paddingRight="30dp"
         android:text="Vật tư"
-        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textColor="@color/purple_700"
         android:textSize="25sp" />
 
     <android.widget.Button
         android:id="@+id/btnXem_TK"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="40dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="20dp"
         android:layout_weight="1"
         android:background="@drawable/menu_custom_button_effect"
         android:drawableRight="@drawable/statistics_48px"
         android:paddingRight="30dp"
         android:text="Thống kê"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="@color/purple_700"/>
 
     <android.widget.Button
         android:id="@+id/btnThoat_menu"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="40dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_weight="1"
         android:background="@drawable/menu_custom_button_effect"
         android:drawableRight="@drawable/shutdown_48px"
         android:paddingRight="30dp"
         android:text="Thoát"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="@color/purple_700"/>
 
 
 </LinearLayout>
