--- a/doAn/app/src/main/res/drawable/half_corner.xml
+++ b/doAn/app/src/main/res/drawable/half_corner.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="#AD474545"/>
     <corners android:bottomRightRadius="25dp"
         android:bottomLeftRadius="25dp"/>
 
