--- a/doAn/app/src/main/res/layout/cong_trinh_custom_listview.xml
+++ b/doAn/app/src/main/res/layout/cong_trinh_custom_listview.xml
@@ -20,12 +20,16 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textAllCaps="true"
+            android:textColor="@color/black"
             />
         <TextView
             android:id="@+id/diaChiCongTrinhTv_CTLV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:textAllCaps="true"
+            android:textColor="@color/black"
             android:textStyle="bold"/>
 
     </LinearLayout>
@@ -40,7 +44,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/details_vector"
             android:id="@+id/chiTietBtn_CTLV"
-            android:backgroundTint="#00000000"
+            android:backgroundTint="@color/white"
             android:contentDescription="xem chi tiết công trình" />
 
         <ImageButton
