--- a/doAn/app/src/main/res/layout/danh_sach_chi_tiet_pvc_custom_listview.xml
+++ b/doAn/app/src/main/res/layout/danh_sach_chi_tiet_pvc_custom_listview.xml
@@ -5,44 +5,52 @@
     >
 
     <TextView
-
+        android:padding="5dp"
         android:layout_row="0"
         android:text="Vật tư" />
 
     <TextView
-
+        android:padding="5dp"
         android:layout_row="1"
         android:layout_column="0"
+        android:textSize="17sp"
         android:text="Số lượng" />
 
     <TextView
-
+        android:padding="5dp"
         android:layout_row="2"
         android:layout_column="0"
+        android:textSize="17sp"
         android:text="Cự ly"
 
         />
 
     <TextView
+        android:padding="5dp"
         android:id="@+id/tenVatTuTv_CTP_CTLV"
         android:layout_row="0"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
+        android:textSize="17sp"
         />
 
     <TextView
+        android:padding="5dp"
         android:id="@+id/soLuongTv_CTP_CTLV"
         android:layout_row="1"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
+        android:textSize="17sp"
         />
 
     <TextView
-
+        android:padding="5dp"
         android:id="@+id/cuLyTv_CTP_CTLV"
         android:layout_row="2"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
+        android:textSize="17sp"
+        android:layout_marginBottom="10dp"
         />
 
     <ImageButton
