cập nhật thống kê doanh thu vật tư

--- a/doAn/app/src/main/res/layout/activity_thong_ke.xml
+++ b/doAn/app/src/main/res/layout/activity_thong_ke.xml
@@ -20,7 +20,7 @@
         android:id="@+id/vatTuDoanhThuCaoTv_ThongKe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Vật tư có doanh thu cao"
+        android:text="Doanh Thu Vật Tư"
         android:textColor="@color/black"
         android:textSize="17dp"
         android:background="@drawable/border"
