update renew list chi tiết vật tư trong phiếu vận chuyển

--- a/doAn/app/src/main/res/layout/activity_menu.xml
+++ b/doAn/app/src/main/res/layout/activity_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg5"
+    android:background="@drawable/bg7"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingBottom="40dp"
@@ -35,7 +35,7 @@
         android:drawableRight="@drawable/building_48px"
         android:paddingRight="30dp"
         android:text="Công trình"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="25sp" />
 
@@ -51,7 +51,7 @@
         android:paddingRight="30dp"
         android:text="Vật tư"
         android:textStyle="bold"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/white"
         android:textSize="25sp" />
 
     <android.widget.Button
@@ -67,7 +67,7 @@
         android:text="Thống kê"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:textColor="@color/purple_700"/>
+        android:textColor="@color/white"/>
 
     <android.widget.Button
         android:id="@+id/btnThoat_menu"
@@ -81,7 +81,7 @@
         android:text="Thoát"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:textColor="@color/purple_700"/>
+        android:textColor="@color/white"/>
 
 
 </LinearLayout>
