--- a/doAn/app/src/main/res/layout/activity_them_vat_tu_phieu_van_chuyen.xml
+++ b/doAn/app/src/main/res/layout/activity_them_vat_tu_phieu_van_chuyen.xml
@@ -4,27 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ThemVatTuPhieuVanChuyen"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="20dp"
+    tools:context=".ThemVatTuPhieuVanChuyen">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Chọn vật tư muốn thêm"
-        android:textSize="17sp"/>
+        android:textSize="17sp" />
 
     <Spinner
         android:id="@+id/danhSachVatTuSpn_TVTCTP"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nhập só lượng:"
-        android:textSize="17sp"/>
+        android:textSize="17sp" />
 
     <EditText
         android:id="@+id/soLuongEdt_TVTCTP"
@@ -32,26 +31,27 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="number"
-        android:textSize="17sp"/>
+        android:textSize="17sp" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nhập cư ly vận chuyển:"
-        android:textSize="17sp"/>
+        android:textSize="17sp" />
 
     <EditText
         android:id="@+id/cuLyEdt_TVTCTP"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:textSize="17sp"
-        android:inputType="number" />
-<Button
-    android:id="@+id/themBtn_TVTCTP"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Thêm"
-    android:onClick="themVatTuVaoPhieu"/>
+        android:inputType="number"
+        android:textSize="17sp" />
+
+    <Button
+        android:id="@+id/themBtn_TVTCTP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="themVatTuVaoPhieu"
+        android:text="Thêm" />
 </LinearLayout>
