--- a/doAn/app/src/main/res/layout/them_don_vi_tinh_dialog.xml
+++ b/doAn/app/src/main/res/layout/them_don_vi_tinh_dialog.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center|top">
+    android:gravity="center|top"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/tenTimKiemTv_dialog"
